--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -9,15 +9,15 @@ menu:
     标签: /tags/ || icon-sekuaibiaoqian || faa-tada
     分类: /categories/ || icon-fenlei || faa-tada
   休闲 || icon-pinweishenghuo || faa-tada || hide:
-    八音盒: /life/music/ ||icon-yinle || faa-tada
-    影院: /life/movies/ ||icon-dianying1 || faa-tada
-    游戏: /life/games/ || icon-youxishoubing || faa-tada
-  八宝箱 || icon-xiangzi || faa-tada || hide:
+    八音盒: /box/music/ ||icon-yinle || faa-tada
     画廊: /box/gallery/ ||icon-tubiaozhizuomoban || faa-tada
     动画: /box/animation/ || icon-nvwumao || faa-tada
-    网址导航: /box/nav/ || icon-zhifengche || faa-tada
+  # 八宝箱 || icon-xiangzi || faa-tada || hide:
+  # 影院: /life/movies/ ||icon-dianying1 || faa-tada
+  # 游戏: /life/games/ || icon-youxishoubing || faa-tada
+  # 网址导航: /box/nav/ || icon-zhifengche || faa-tada
   社交 || icon-shejiaoxinxi || faa-tada || hide:
-    朋友圈: /social/fcircle/ || icon-pengyouquan || faa-tada
+    # 朋友圈: /social/fcircle/ || icon-pengyouquan || faa-tada
     留言板: /comments/ || icon-liuyan || faa-tada
     友人帐: /social/link/ || icon-lianjie || faa-tada
   网站 || icon-wangye || faa-tada || hide:
@@ -53,10 +53,10 @@ copy:
 social:
   # Github: https://github.com/fomalhaut1998 || icon-github || faa-tada
   微信: /assets/QRCode.jpg || icon-weixin || faa-tada
-  QQ: https://res.abeim.cn/api/qq/?qq=1174008660 || icon-QQ || faa-tada
-  B站: https://space.bilibili.com/220757832 || icon-bilibili || faa-tada
-  QQ邮箱: mailto:1174008660@qq.com || icon-youxiang || faa-tada
-  力扣: https://leetcode.cn/u/fomalhaut1998 || icon-leetcode || faa-tada
+  QQ: https://res.abeim.cn/api/qq/?qq=1405720461 || icon-QQ || faa-tada
+  B站: https://space.bilibili.com/392071577 || icon-bilibili || faa-tada
+  QQ邮箱: mailto:1405720461@qq.com || icon-youxiang || faa-tada
+  力扣: https://leetcode.cn/u/SmarxeCtAT/ || icon-leetcode || faa-tada
   # 微博: https://weibo.com/u/6473136435 || icon-weibo || faa-tada
   # 知乎: https://www.zhihu.com/people/liang-jia-chao-19 || icon-shejiaotubiao-10 || faa-tada
   # RSS: /atom.xml || icon-RSS || faa-tada
@@ -113,7 +113,7 @@ favicon:
 
 # Avatar (頭像)
 avatar:
-  img: https://tuchuang.voooe.cn/images/2023/01/02/avatar.webp
+  img: https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg
   effect: false
 
 # Disable all banner image
@@ -216,18 +216,18 @@ post_copyright:
   enable: true
   decode: true
   author_href:
-  license: CC BY-NC-SA 4.0
-  license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
+  license:
+  license_url:
 
 # Sponsor/reward
 reward:
   enable: true
   coinAudio: https://npm.elemecdn.com/akilar-candyassets@1.0.36/audio/aowu.m4a
   QR_code:
-    - img: https://tuchuang.voooe.cn/images/2023/01/04/2.webp
+    - img: https://cdn.staticaly.com/gh/1405720461/images@master/img/mm_facetoface_collect_qrcode_1679200526786.png
       link:
       text: 微信
-    - img: https://tuchuang.voooe.cn/images/2023/01/04/20f8e49805975b8f8.webp
+    - img: https://cdn.staticaly.com/gh/1405720461/images@master/img/1679209570.jpg
       link:
       text: 支付宝
 
@@ -379,7 +379,7 @@ facebook_comments:
 # Twikoo
 # https://github.com/imaegoo/twikoo
 twikoo:
-  envId: 
+  envId:
   region:
   visitor: false
   option:
@@ -456,7 +456,7 @@ footer:
 
 # Baidu Analytics
 # https://tongji.baidu.com/web/welcome/login
-baidu_analytics: 
+baidu_analytics:
 
 # Google Analytics
 # https://analytics.google.com/analytics/web/
@@ -542,14 +542,14 @@ tag_ui: # 留空或 index
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
 # "#e4f4f6" "#efefef"
 background:
-  #【必选】默认背景 
-  default: var(--default-bg)
-  #【可选】PC端夜间模式背景 
-  darkmode: var(--darkmode-bg)
-  #【可选】移动端日间默认背景 
-  mobileday: var(--mobileday-bg)
-  #【可选】移动端夜间模式背景 
-  mobilenight: var(--mobilenight-bg)
+  #【必选】默认背景  var(--default-bg)
+  default: url(https://cdn.staticaly.com/gh/1405720461/images@master/Arknights2/9.jpg)
+  #【可选】PC端夜间模式背景
+  darkmode: url(https://cdn.staticaly.com/gh/1405720461/images@master/Arknights/152.jpg)
+  #【可选】移动端日间默认背景
+  mobileday: url(https://cdn.staticaly.com/gh/1405720461/images@master/Darling/172.jpg)
+  #【可选】移动端夜间模式背景
+  mobilenight: url(https://cdn.staticaly.com/gh/1405720461/images@master/Darling/62.jpg)
 
 # Footer Background
 footer_bg: false
@@ -671,8 +671,8 @@ subtitle:
   source: false
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
-    - "Welcome to Fomalhaut🥝のTiny Home!🤣🤣🤣"
-    - "Hope you have a nice day!🍭🍭🍭"
+    - "Welcome to Darling の Home!"
+    - "Hope you have a nice day!"
 
 # Loading Animation (加載動畫)
 # preloader: false
@@ -702,10 +702,10 @@ aside:
       enable: true
       icon: # fab fa-github
       text: 前往小窝
-      link: https://github.com/fomalhaut1998
+      link: https://github.com/1405720461
   card_announcement:
     enable: true
-    content: <center><b>--- 主域名 ---<br><a href="https://www.fomal.cc" title="此线路部署于Vercel" class="anno_content"><font color="#5ea6e5">fomal.cc</font></a>&nbsp;|&nbsp;<a href="https://www.fomal.cn" title="此线路部署于Vercel" class="anno_content"><font color="#5ea6e5">fomal.cn</font></a><br>--- 备用域名 ---<br><a href="https://netlify.fomal.cc" title="此线路部署于Netlify" class="anno_content"><font color="#5ea6e5">netlify.fomal.cc</font></a><br><a href="https://cloudflare.fomal.cc" title="此线路部署于Cloudflare" class="anno_content"><font color="#5ea6e5">cloudflare.fomal.cc</font></a><br>--- 网站安卓APP ---<br>🍧<a href="https://lskypro.acozycotage.net/Fomalhaut/Fomalhaut.apk" title="点这里可以下载网站的安卓APP" class="anno_content"><font color="#5ea6e5">点此下载</font></a>🍧</b></center>
+    content: <center><>--- 主域名 ---<br><a href="https://wjldarling.top/" class="anno_content"><font color="#5ea6e5">wjldarling.top</font></a><br>--- 备用域名 ---<br><a href="https://wjldarling.netlify.app" class="anno_content"><font color="#5ea6e5">wjldarling.netlify.app</font></a></center>
   card_recent_post:
     enable: false
     limit: 3 # if set 0 will show all
@@ -733,10 +733,11 @@ aside:
     post_count: true
     last_push_date: true
     sort_order: # Don't modify the setting unless you know how it works
+  # 微博侧边栏
   card_weibo:
     enable: false
   card_friend_link: #友链通讯录
-    enable: true
+    enable: false
     sort_order: # Don't modify the setting unless you know
 
 # busuanzi count for PV / UV in site
@@ -750,7 +751,7 @@ busuanzi:
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
   enable: false
-  publish_date: 8/9/2022 00:00:00
+  publish_date: 5/14/2023 00:00:00
 
 # Aside widget - Newest Comments
 newest_comments:
@@ -927,7 +928,7 @@ inject:
     - <script async src="//at.alicdn.com/t/c/font_3586335_hsivh70x0fm.js"></script> # js图标引入1
     - <script async src="//at.alicdn.com/t/c/font_3636804_gr02jmjr3y9.js"></script> # js图标引入2
     - <script async src="//at.alicdn.com/t/c/font_3612150_kfv55xn3u2g.js"></script> # js图标引入3
-    - <script async src="https://cdn.wpon.cn/2022-sucai/Gold-ingot.js"></script>  # 新年元宝
+    - <script async src="https://cdn.wpon.cn/2022-sucai/Gold-ingot.js"></script> # 新年元宝
     - <canvas id="universe"></canvas> # 星空画布
     - <canvas id="snow"></canvas> # 雪花画布
     - <script defer src="/js/fomal.js"></script> # 主模块js
@@ -948,6 +949,9 @@ CDN:
 
   # Add version number to CDN, true or false
   version: false
+
+  # 微博模块
+  card_weibo: /js/fomal.js
 
   # Custom format
   # For example: https://cdn.staticfile.org/${cdnjs_name}/${version}/${min_cdnjs_file}
@@ -1080,11 +1084,11 @@ envelope_comment:
     beforeimg: https://tuchuang.voooe.cn/images/2023/01/02/before.webp # 信封前半部分
     afterimg: https://tuchuang.voooe.cn/images/2023/01/02/after.webp # 信封后半部分
   message: #信笺正文，多行文本，写法如下
-    - 本站有哪些做得好或者不好的地方？
-    - 或者你有什么改进的建议？
-    - 又或者你有什么具体的问题需要咨询？
-    - 都可以在下方评论区留言哦~~~
-  bottom: F小站站长亲自为您服务！ #仅支持单行文本
+    - 有什么想问的？
+    - 有什么想说的？
+    - 有什么想吐槽的？
+    - 哪怕是有什么想吃的，都可以告诉我哦~
+  bottom: 自动书记人偶竭诚为您服务！ #仅支持单行文本
   height: #1050px，信封划出的高度
   path: #【可选】comments 的路径名称。默认为 comments，生成的页面为 comments/index.html
   front_matter: #【可选】comments页面的 front_matter 配置
