--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Hexo Configuration
+# Hexo Configurationcrc32
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
@@ -18,7 +18,8 @@ abbrlink:
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://github.com/1405720461/1405720461.github.io
+# https://github.com/1405720461/1405720461.github.io
+url: https://wjldarling.top/
 permalink: posts/:abbrlink.html
 permalink_defaults:
 pretty_urls:
@@ -233,7 +234,7 @@ gitcalendar:
   #   name: content
   #   index: 0
   # simplemode: true
-  user: #git用户名
+  user: 1405720461
   apiurl: ""
   minheight:
     pc: 320px #桌面端最小高度
@@ -263,22 +264,22 @@ magnet:
   devide: 3
   display:
     - name: 算法
-      display_name: 小Fの算法学习笔记
+      display_name: 算法学习笔记
       icon: 🍡
     - name: 计算机基础
-      display_name: 小Fの计算机基础笔记
+      display_name: 计算机基础笔记
       icon: 🍼
     - name: 魔改教程
-      display_name: 小Fの博客魔改教程
+      display_name: 博客魔改教程
       icon: 🍉
     - name: Java基础
-      display_name: 小FのJava基础笔记
+      display_name: Java基础笔记
       icon: 🍟
     - name: 数据库
-      display_name: 小Fの数据库笔记
+      display_name: 数据库笔记
       icon: 🍨
     - name: 演示
-      display_name: 小Fの案例演示笔记
+      display_name: 案例演示笔记
       icon: 🍥
   color_setting:
     text_color: black # 文字默认颜色
@@ -291,3 +292,14 @@ magnet:
     index: 0
   temple_html: '<div class="recent-post-item" style="width:100%;height: auto"><div id="catalog_magnet">${temple_html_item}</div></div>'
   plus_style: ""
+
+# 恋爱秘密
+encrypt: # hexo-blog-encrypt
+  abstract: 只有你和我才知道密码!
+  message: 这里记录我和女朋友的一些事情哦，需要密码才能进入!
+  tags:
+    - { name: 你好可爱, password: wangjinglun }
+    - { name: panxinyun, password: panxinyun }
+  theme: xray
+  wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
+  wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
