--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,10 +1,8 @@
 - class_name: 0.推荐网站🍔
   class_desc: 这里是最熟悉的小伙伴或者赞助商，当然是最前排啦
-  link_list: 
-    - name: Fomalhaut🥝
+  link_list:
+    - name: 你好可爱
       link: https://www.fomal.cc/
-      avatar: https://www.fomal.cc/assets/avatar.webp
+      avatar: https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg
       descr: Future is now 🍭🍭🍭
-      siteshot: https://source.fomal.cc/siteshot/www.fomal.cn.jpg
-
-
+      siteshot:
