--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,8 +1,8 @@
-- class_name: 0.推荐网站🍔
-  class_desc: 这里是最熟悉的小伙伴或者赞助商，当然是最前排啦
+- class_name: 友链
+  class_desc: 这里是最熟悉的小伙伴，前排前排
   link_list:
     - name: 你好可爱
-      link: https://www.fomal.cc/
+      link: https://wjldarling/
       avatar: https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg
       descr: Future is now 🍭🍭🍭
-      siteshot:
+      siteshot: https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.png
