新增评论功能

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -379,7 +379,7 @@ facebook_comments:
 # Twikoo
 # https://github.com/imaegoo/twikoo
 twikoo:
-  envId:
+  envId: https://02-comment.vercel.app/
   region:
   visitor: false
   option:
