--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "netlify": "npm run clean && npm run build"
+    "netlify": "npm run clean && npm run build",
+    "dev": "hexo cl && hexo g && hexo s"
   },
   "hexo": {
     "version": "6.3.0"
