--- a/_config.yml
+++ b/_config.yml
@@ -263,24 +263,24 @@ magnet:
   type: categories
   devide: 3
   display:
-    - name: 算法
-      display_name: 算法学习笔记
+    - name: 前端
+      display_name: 前端笔记
       icon: 🍡
-    - name: 计算机基础
-      display_name: 计算机基础笔记
+    - name: 日常
+      display_name: 日常生活碎片
       icon: 🍼
-    - name: 魔改教程
-      display_name: 博客魔改教程
-      icon: 🍉
-    - name: Java基础
-      display_name: Java基础笔记
-      icon: 🍟
-    - name: 数据库
-      display_name: 数据库笔记
-      icon: 🍨
-    - name: 演示
-      display_name: 案例演示笔记
-      icon: 🍥
+    # - name: 魔改教程
+    #   display_name: 博客魔改教程
+    #   icon: 🍉
+    # - name: Java基础
+    #   display_name: Java基础笔记
+    #   icon: 🍟
+    # - name: 数据库
+    #   display_name: 数据库笔记
+    #   icon: 🍨
+    # - name: 演示
+    #   display_name: 案例演示笔记
+    #   icon: 🍥
   color_setting:
     text_color: black # 文字默认颜色
     text_hover_color: white # 文字鼠标悬浮颜色
