--- a/_config.yml
+++ b/_config.yml
@@ -255,6 +255,34 @@ gitcalendar:
 plugins:
   - hexo-algoliasearch
 
+# 分类磁铁4.0
+# hexo-butterfly-categories-card
+# see https://akilar.top/posts/a9131002/
+categoryBar:
+  enable: false # 开关
+  priority: 5 #过滤器优先权
+  enable_page: / # 应用页面
+  layout: # 挂载容器类型
+    type: id
+    name: recent-posts
+    index: 0
+  column: odd # odd：3列 | even：4列
+  row: 2 #显示行数，默认两行，超过行数切换为滚动显示
+  message:
+    - descr: Ubuntu指南
+      cover: https://npm.elemecdn.com/akilar-candyassets/image/cover1.webp
+    - descr: 玩转Win10
+      cover: https://npm.elemecdn.com/akilar-candyassets/image/cover2.webp
+    - descr: 长篇小说连载
+      cover: https://npm.elemecdn.com/akilar-candyassets/image/cover3.webp
+    - descr: 个人日记
+      cover: https://npm.elemecdn.com/akilar-candyassets/image/cover4.webp
+    - descr: 诗词歌赋
+      cover: https://npm.elemecdn.com/akilar-candyassets/image/cover5.webp
+    - descr: 杂谈教程
+      cover: https://npm.elemecdn.com/akilar-candyassets/image/cover6.webp
+  custom_css: https://npm.elemecdn.com/hexo-butterfly-categories-card@1.0.0/lib/categorybar.css
+
 # 小冰分类磁贴
 magnet:
   enable: true
@@ -263,24 +291,25 @@ magnet:
   type: categories
   devide: 3
   display:
-    - name: 前端
-      display_name: 前端笔记
+    - name: js
+      display_name: JavaScript笔记
       icon: 🍡
+    - name: Vue
+      display_name: Vue笔记
+      icon: 🍉
     - name: 日常
       display_name: 日常生活碎片
       icon: 🍼
-    # - name: 魔改教程
-    #   display_name: 博客魔改教程
-    #   icon: 🍉
+    - name: 演示
+      display_name: 案例演示笔记
+      icon: 🍥
     # - name: Java基础
     #   display_name: Java基础笔记
     #   icon: 🍟
     # - name: 数据库
     #   display_name: 数据库笔记
     #   icon: 🍨
-    # - name: 演示
-    #   display_name: 案例演示笔记
-    #   icon: 🍥
+
   color_setting:
     text_color: black # 文字默认颜色
     text_hover_color: white # 文字鼠标悬浮颜色
@@ -292,14 +321,13 @@ magnet:
     index: 0
   temple_html: '<div class="recent-post-item" style="width:100%;height: auto"><div id="catalog_magnet">${temple_html_item}</div></div>'
   plus_style: ""
-
 # 恋爱秘密
-encrypt: # hexo-blog-encrypt
-  abstract: 只有你和我才知道密码!
-  message: 这里记录我和女朋友的一些事情哦，需要密码才能进入!
-  tags:
-    - { name: 你好可爱, password: wangjinglun }
-    - { name: panxinyun, password: panxinyun }
-  theme: xray
-  wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
-  wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
+# encrypt: # hexo-blog-encrypt
+#   abstract: 只有你和我才知道密码!
+#   message: 这里记录我和女朋友的一些事情哦，需要密码才能进入!
+#   tags:
+#     - { name: 你好可爱, password: wangjinglun }
+#     - { name: panxinyun, password: panxinyun }
+#   theme: xray
+#   wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
+#   wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
