--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-algoliasearch": "^1.0.0",
     "hexo-baidu-url-submit": "0.0.6",
     "hexo-blog-encrypt": "^3.1.6",
+    "hexo-butterfly-categories-card": "^1.0.0",
     "hexo-butterfly-clock-anzhiyu": "^1.1.8",
     "hexo-butterfly-envelope": "^1.0.15",
     "hexo-butterfly-swiper": "^1.0.12",
