--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -2,7 +2,7 @@
   class_desc: 这里是最熟悉的小伙伴，前排前排
   link_list:
     - name: 你好可爱
-      link: https://wjldarling/
+      link: https://wjldarling.top/
       avatar: https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg
       descr: Future is now 🍭🍭🍭
       siteshot: https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.png
