--- a/_config.yml
+++ b/_config.yml
@@ -291,21 +291,21 @@ magnet:
   type: categories
   devide: 3
   display:
-    - name: js
-      display_name: JavaScript笔记
+    - name: 前端
+      display_name: 前端笔记
       icon: 🍡
-    - name: Vue
-      display_name: Vue笔记
-      icon: 🍉
     - name: 日常
       display_name: 日常生活碎片
       icon: 🍼
     - name: 演示
       display_name: 案例演示笔记
       icon: 🍥
-    # - name: Java基础
-    #   display_name: Java基础笔记
-    #   icon: 🍟
+    - name: 恋爱
+      display_name: 恋爱日常分享
+      icon: 🧡
+    # - name: Vue
+    #   display_name: Vue笔记
+    #   icon: 🍉
     # - name: 数据库
     #   display_name: 数据库笔记
     #   icon: 🍨
@@ -326,8 +326,8 @@ magnet:
 #   abstract: 只有你和我才知道密码!
 #   message: 这里记录我和女朋友的一些事情哦，需要密码才能进入!
 #   tags:
-#     - { name: 你好可爱, password: wangjinglun }
-#     - { name: panxinyun, password: panxinyun }
+#     - { name: tagName, password: 密码A }
+#     - { name: tagName, password: 密码B }
 #   theme: xray
 #   wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
 #   wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
