--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -5,4 +5,4 @@
       link: https://wjldarling.top/
       avatar: https://cdn.staticaly.com/gh/1405720461/images@master/img/188.jpg
       descr: Future is now 🍭🍭🍭
-      siteshot: https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.png
+      siteshot: https://cdn.staticaly.com/gh/1405720461/images@master/img/wjldarling.webp
