--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -17,7 +17,7 @@ menu:
     留言板: /comments/ || icon-liuyan || faa-tada
     友人帐: /social/link/ || icon-lianjie || faa-tada
     旧时光: /site/time/ || icon-xianxingshalou || faa-tada
-  # 恋爱小屋: /personal/love/ || icon-love-sign || faa-tada
+  恋爱小屋: /personal/love/ || icon-love-sign || faa-tada
   # 个人 || icon-maoliang || faa-tada || hide:
   # 八宝箱 || icon-xiangzi || faa-tada || hide:
   # 网站 || icon-wangye || faa-tada || hide:
@@ -254,9 +254,9 @@ photofigcaption: false
 # false: disable pagination
 post_pagination: 1
 
-# Displays outdated notice for a post (文章過期提醒)
+# Displays outdated notice for a post (文章过期提醒)
 noticeOutdate:
-  enable: true
+  enable: false
   style: flat # style: simple/flat
   limit_day: 365 # When will it be shown
   position: top # position: top/bottom
