--- a/_config.yml
+++ b/_config.yml
@@ -79,9 +79,10 @@ aplayer:
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
+# 首页显示文章数
 index_generator:
   path: ""
-  per_page: 12
+  per_page: 9
   order_by: -date
 
 # Category & Tag
