--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -48,23 +48,16 @@ copy:
     enable: false
     limit_count: 50
 
-# social settings (社交圖標設置)
+# social settings (社交图标设置)
 # formal:
 #   icon: link || the description
 social:
-  # Github: https://github.com/fomalhaut1998 || icon-github || faa-tada
-  微信: /assets/QRCode.jpg || icon-weixin || faa-tada
   QQ: https://res.abeim.cn/api/qq/?qq=1405720461 || icon-QQ || faa-tada
+  微信: /assets/QRCode.jpg || icon-weixin || faa-tada
+  Github: https://github.com/1405720461 || icon-github || faa-tada
   B站: https://space.bilibili.com/392071577 || icon-bilibili || faa-tada
-  QQ邮箱: mailto:1405720461@qq.com || icon-youxiang || faa-tada
   力扣: https://leetcode.cn/u/SmarxeCtAT/ || icon-leetcode || faa-tada
-
-  # iconfont icon-github: https://github.com/fomalhaut1998 || Github
-  # iconfont icon-youjian: mailto:1174008660@qq.com || QQ邮箱
-  # iconfont icon-tv: https://space.bilibili.com/220757832 || B站
-  # iconfont icon-leetcode: https://leetcode.cn/u/fomalhaut1998/ || 力扣
-  # iconfont icon-weibo: https://weibo.com/u/6473136435 || 微博
-  # iconfont icon-shejiaotubiao-46: https://www.zhihu.com/people/liang-jia-chao-19 || 知乎
+  # QQ邮箱: mailto:1405720461@qq.com || icon-youxiang || faa-tada
 
 # search (搜索)
 # see https://butterfly.js.org/posts/ceeb73f/#搜索系統
@@ -754,7 +747,7 @@ busuanzi:
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
   enable: false
-  publish_date: 5/14/2023 00:00:00
+  publish_date: 05/14/2023 00:00:00
 
 # Aside widget - Newest Comments
 newest_comments:
