--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hexo-butterfly-tag-plugins-plus": "^1.0.17",
     "hexo-butterfly-wowjs": "^1.0.5",
     "hexo-deployer-git": "^3.0.0",
+    "hexo-douban": "^2.2.1",
     "hexo-filter-gitcalendar": "^1.0.9",
     "hexo-filter-nofollow": "^2.0.2",
     "hexo-generator-archive": "^1.0.0",
