更新力扣网址

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -55,7 +55,7 @@ social:
   微信: /assets/QRCode.jpg || icon-weixin || faa-tada
   Github: https://github.com/1405720461 || icon-github || faa-tada
   B站: https://space.bilibili.com/392071577 || icon-bilibili || faa-tada
-  力扣: https://leetcode.cn/u/SmarxeCtAT/ || icon-leetcode || faa-tada
+  力扣: https://leetcode.cn/u/wjldarling/ || icon-leetcode || faa-tada
   # QQ邮箱: mailto:1405720461@qq.com || icon-youxiang || faa-tada
 
 # search (搜索)
