--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 你好可爱
 subtitle: ''
-description: "Future is now 🍭🍭🍭"
+description: "山水一程，三生有幸✨"
 keywords: "javascript,Vue,代码,博客"
 author: 你好可爱
 language: zh-CN
