--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -8,9 +8,11 @@ menu:
     归档: /archives/ || icon-guidang1 || faa-tada
     标签: /tags/ || icon-sekuaibiaoqian || faa-tada
     分类: /categories/ || icon-fenlei || faa-tada
-  百宝箱 || icon-xiangzi || faa-tada || hide:
+  休闲 || icon-pinweishenghuo || faa-tada || hide:
     八音盒: /life/music/ ||icon-yinle || faa-tada
     追番: /bangumis/ || icon-nvwumao || faa-tada
+    影院: /life/movies/ ||icon-dianying1 || faa-tada
+  百宝箱 || icon-xiangzi || faa-tada || hide:
     画廊: /box/gallery/ ||icon-tubiaozhizuomoban || faa-tada
     游戏: /box/games/ || icon-youxishoubing || faa-tada
   社交 || icon-shejiaoxinxi || faa-tada || hide:
@@ -20,8 +22,6 @@ menu:
   个人 || icon-maoliang || faa-tada || hide:
     关于: /personal/about/ || icon-paperplane || faa-tada
     恋爱小屋: /personal/love/ || icon-love-sign || faa-tada
-  # 休闲 || icon-pinweishenghuo || faa-tada || hide:
-    # 影院: /life/movies/ ||icon-dianying1 || faa-tada
   # 网站 || icon-wangye || faa-tada || hide:
   #   网站统计: /site/census/ || icon--tongjibiao || faa-tada
   #   文章统计: /site/echarts/ || icon-shujutongji1 || faa-tada
@@ -165,6 +165,20 @@ cover:
     - /assets/images/blog_bg/17.webp
     - /assets/images/blog_bg/18.webp
     - /assets/images/blog_bg/19.webp
+    - /assets/images/blog_bg/20.webp
+    - /assets/images/blog_bg/21.webp
+    - /assets/images/blog_bg/22.webp
+    - /assets/images/blog_bg/23.webp
+    - /assets/images/blog_bg/24.webp
+    - /assets/images/blog_bg/25.webp
+    - /assets/images/blog_bg/26.webp
+    - /assets/images/blog_bg/27.webp
+    - /assets/images/blog_bg/28.webp
+    - /assets/images/blog_bg/29.webp
+    - /assets/images/blog_bg/30.webp
+    - /assets/images/blog_bg/31.webp
+    - /assets/images/blog_bg/32.webp
+    - /assets/images/blog_bg/33.webp
 
 
     # - /assets/images/Darling/2.webp
@@ -1137,7 +1151,7 @@ envelope_comment:
     comments: true
 
 # 友链样式，butterfly为默认样式，volantis为站点卡片样式.flexcard为弹性卡片样式
-flink_style: volantis # butterfly | volantis | flexcard
+flink_style: flexcard # butterfly | volantis | flexcard
 
 # Replace Broken Images (友链头像无法显示)
 error_img:
