--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -66,3 +66,9 @@
       avatar: https://cdn1.tianli0.top/gh/linjiangyu2/halo/img/fa.jpg
       descr: 这世界温暖的人如树一样多 我也想成为其中的一颗
       siteshot: https://cdn1.tianli0.top/gh/linjiangyu2/halo/img/siteshot.jpg
+
+    - name: Iridescent Trajectory🌠
+      link: https://ovoz.cn
+      avatar: https://ovoz.cn/assets/avatar.webp
+      descr: 蝉鸣如雨,花霄道中🍭🍭🍭
+      siteshot: https://ovoz.cn/assets/ovoz.cn.jpg
