--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -10,7 +10,7 @@ menu:
     分类: /categories/ || icon-fenlei || faa-tada
   休闲 || icon-pinweishenghuo || faa-tada || hide:
     八音盒: /life/music/ ||icon-yinle || faa-tada
-    追番: /bangumis/ || icon-nvwumao || faa-tada
+    追番: /life/bangumis/ || icon-nvwumao || faa-tada
     影院: /life/movies/ ||icon-dianying1 || faa-tada
   百宝箱 || icon-xiangzi || faa-tada || hide:
     画廊: /box/gallery/ ||icon-tubiaozhizuomoban || faa-tada
