--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -15,6 +15,7 @@ menu:
   百宝箱 || icon-xiangzi || faa-tada || hide:
     画廊: /box/gallery/ ||icon-tubiaozhizuomoban || faa-tada
     游戏: /box/games/ || icon-youxishoubing || faa-tada
+    收藏: /box/collect/ ||icon-zhifengche || faa-tada
   社交 || icon-shejiaoxinxi || faa-tada || hide:
     留言板: /comments/ || icon-liuyan || faa-tada
     友人帐: /social/link/ || icon-lianjie || faa-tada
@@ -948,6 +949,8 @@ Open_Graph_meta: true
 
 # Add the vendor prefixes to ensure compatibility
 css_prefix: true
+
+
 
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
