--- a/_config.yml
+++ b/_config.yml
@@ -268,17 +268,59 @@ bangumi:
 
 # 豆瓣影院模块
 douban:
-  user: 271110737  # 你的豆瓣ID
+  id: 271110737  # 你的豆瓣ID
   builtin: true
   movie:
     path: /life/movies/index.html
     title: '影院'
-    quote: ''
+    quote: '<div class="wjl_rating">
+              <input value="star-1" name="star-radio" id="star-1" type="radio">
+              <label for="star-1">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-2" type="radio">
+              <label for="star-2">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-3" type="radio">
+              <label for="star-3">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-4" type="radio">
+              <label for="star-4">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-5" type="radio">
+              <label for="star-5">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+            </div>'
   game:
     path: /box/games/index.html
     title: '游戏'
-    quote: ''
-  timeout: 10000 
+    quote: '<div class="wjl_rating">
+              <input value="star-1" name="star-radio" id="star-1" type="radio">
+              <label for="star-1">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-2" type="radio">
+              <label for="star-2">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-3" type="radio">
+              <label for="star-3">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-4" type="radio">
+              <label for="star-4">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+              <input value="star-1" name="star-radio" id="star-5" type="radio">
+              <label for="star-5">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+              </label>
+            </div>'
+  timeout: 10000
 
 # 小冰分类磁贴
 magnet:
