--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -424,7 +424,7 @@ facebook_comments:
 # Twikoo
 # https://github.com/imaegoo/twikoo
 twikoo:
-  envId: https://02-comment.vercel.app/
+  envId: https://twikoo.wjldarling.top/
   region:
   visitor: false
   option:
