--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -24,7 +24,7 @@
 
     - name: Fomalhaut🥝
       link: https://www.fomal.cc/
-      avatar: https://cdn.staticaly.com/gh/1405720461/blog_img@main/link/fomalhaut.webp
+      avatar: https://www.fomal.cc/assets/avatar.webp
       descr: Future is now 🍭🍭🍭
       siteshot: https://source.fomal.cc/siteshot/www.fomal.cn.jpg
 
