--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -991,7 +991,7 @@ inject:
     - <script defer src="/js/fomal.js"></script> # 主模块js
     - <script async data-pjax src="/js/txmap.js"></script> # 腾讯位置API
     # 底部音乐播放器
-    - <div class="aplayer no-destroy" data-id="2733900165" data-server="netease" data-type="playlist" data-autoplay="true" data-fixed="true" data-mini="true" data-listFolded="false" data-order="random" data-preload="none" muted></div>
+    - <div class="aplayer no-destroy" id="bottom_aplayer" data-id="2733900165" data-server="netease" data-type="playlist" data-autoplay="true" data-fixed="true" data-mini="true" data-listFolded="false" data-order="random" data-preload="none" muted></div>
 
 # CDN
 # Don't modify the following settings unless you know how they work
