--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -72,3 +72,9 @@
       avatar: https://ovoz.cn/assets/avatar.webp
       descr: 蝉鸣如雨,花霄道中🍭🍭🍭
       siteshot: https://ovoz.cn/assets/ovoz.cn.jpg
+
+    - name: Shine
+      link: https://blog.shineyu.cn/
+      avatar: https://blog.shineyu.cn/img/shineyu_avatar.webp
+      descr: 热爱生活点滴，分享时刻精彩。
+      siteshot: https://blog.shineyu.cn/img/website.webp
