--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -78,3 +78,9 @@
       avatar: https://blog.shineyu.cn/img/shineyu_avatar.webp
       descr: 热爱生活点滴，分享时刻精彩。
       siteshot: https://blog.shineyu.cn/img/website.webp
+
+    - name: Ading阿定の小站
+      link: https://saop.cc
+      avatar: https://picbed.saop.cc/Asuna/Asuna1x1.png
+      descr: 我们终会相遇相知，在那悠远的苍穹
+      siteshot: https://picbed.saop.cc/Asuna/Asuna-EvolutionaryProcess_2.png
