--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,11 @@ i18n_dir: :lang
 skip_render: [
               'box/collect/龙猫/**',
               'box/collect/love/**',
-              'box/collect/烟花绽放/**',
-              'box/collect/九宫格拼图游戏/**',
               'box/collect/12个动画/**',
               'box/collect/todolist/**',
+              'box/collect/烟花绽放/**',
+              'box/collect/响应式视差滚动相册/**',
+              'box/collect/九宫格拼图游戏/**',
               'box/collect/点击轮播图/**',
               'box/collect/太阳系运动/**',
               'box/collect/滑动登录注册页/**',
