--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ skip_render: [
               'box/collect/todolist/**',
               'box/collect/烟花绽放/**',
               'box/collect/响应式视差滚动相册/**',
+              'box/collect/响应式时间轴/**',
+              'box/collect/鼠标跟踪相册/**',
               'box/collect/九宫格拼图游戏/**',
               'box/collect/点击轮播图/**',
               'box/collect/太阳系运动/**',
