--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ skip_render: [
               'box/collect/太阳系运动/**',
               'box/collect/滑动登录注册页/**',
               'box/collect/画图板/**',
-              'box/collect/评价交互特效/**',
+              'box/collect/Day-night-toggle-button-master/**',
               'box/collect/粘性球球/**',
              ]
 
