--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -104,3 +104,9 @@
       avatar: https://www.mz521.cn/tp/8.png
       descr: 欢迎一起学习
       siteshot: 
+
+    - name: Kiwi Fruit
+      link: https://kiwifruit.asia/
+      avatar: https://kiwifruit.asia/myBlog/assets/head.jpg
+      descr: 懂滴滴代码の背锅狮
+      siteshot: https://kiwifruit.asia/myBlog/assets/index.jpg
