添加博客封面

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -180,6 +180,9 @@ cover:
     - /assets/images/blog_bg/31.webp
     - /assets/images/blog_bg/32.webp
     - /assets/images/blog_bg/33.webp
+    - /assets/images/blog_bg/34.webp
+    - /assets/images/blog_bg/35.webp
+    - /assets/images/blog_bg/36.webp
 
 
     # - /assets/images/Darling/2.webp
