修改友链，添加贪吃蛇动画

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -41,8 +41,8 @@
       descr: 欢迎光临糖果屋
 
     - name: 安知鱼`Blog
-      link: https://anzhiy.cn/
-      avatar: https://img01.anzhiy.cn/useruploads/90/2023/04/23/6444e85234e51.jpg
+      link: https://anheyu.com/
+      avatar: https://img01.anheyu.com/useruploads/90/2023/04/23/6444e85234e51.jpg
       descr: 生活明朗，万物可爱
       siteshot: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/anzhiy.cn.jpg
 
