--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -41,7 +41,7 @@
       descr: 欢迎光临糖果屋
 
     - name: 安知鱼`Blog
-      link: https://anheyu.com/
+      link: https://blog.anheyu.com/
       avatar: https://img01.anheyu.com/useruploads/90/2023/04/23/6444e85234e51.jpg
       descr: 生活明朗，万物可爱
       siteshot: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/anzhiy.cn.jpg
