添加背景图

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -183,6 +183,7 @@ cover:
     - /assets/images/blog_bg/34.webp
     - /assets/images/blog_bg/35.webp
     - /assets/images/blog_bg/36.webp
+    - /assets/images/blog_bg/37.webp
 
 
     # - /assets/images/Darling/2.webp
