--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -110,3 +110,9 @@
       avatar: https://kiwifruit.asia/myBlog/assets/head.jpg
       descr: 懂滴滴代码の背锅狮
       siteshot: https://kiwifruit.asia/myBlog/assets/index.jpg
+
+    - name: 月亮
+      link: https://blog.monl.cc/
+      avatar: https://image.muerg.cn/2/2023/07/16/64b383ff8b832.jpeg
+      descr: 林，我一点都不遗憾没有在最好的时光遇到你因为遇到你之后最好的时光才开始
+      siteshot: https://image.muerg.cn/2/2023/07/16/64b38519cc45b.png
